Poprawki po mergu plus linki w napisach.